# vi: set ts=4 sw=4 ai :
#
# $Id$
#
# Copyright (C) 2016, T-Platforms
# All rights reserved
#

# Source code root Makefile template

EXTRA_DIST = 

bin_PROGRAMS = smt-89hpesX
smt_89hpesX_SOURCES = \
	main.cpp helpers.h \
	EEException.h EEAlloc.h \
	EEBase.cpp EEBase.h EEBasicBlock.cpp EEBasicBlock.h EEExtBlock.cpp EEExtBlock.h \
	img/eeimg.cpp img/eeimg.h \
	img/eeimg_cnccu.cpp img/idt_89hpesXt3.h img/eeimg_cncbp.cpp img/idt_89hpesXnt8.h \
	img/eeimg_cncbp_p4ds.cpp img/eeimg_cncbp_nts.cpp \
	img/eeimg_empty.cpp

